2015-04-12  kitone  <kitone@gna.org>

	* plugins/actions/documentmanagement/documentmanagement.cc:
	* src/gui/dialogfilechooser.cc:
	* src/gui/dialogfilechooser.h:
	Fix bug #20672 : Automatically put the extension when saving a project file

2015-04-12  kitone  <kitone@gna.org>

	* plugins/actions/documentmanagement/documentmanagement.cc:
	* src/documentsystem.cc:
	* src/documentsystem.h:
	Fix bug #23148 : Create new untilted name with extension.

2015-04-12  kitone  <kitone@gna.org>

	* plugins/actions/documentmanagement/documentmanagement.cc:
	Fix bug #23148 : Default to video file name when saving new subtitles.

2015-04-12  kitone  <kitone@gna.org>

	* src/subtitleformatsystem.cc:
	* src/subtitleformatsystem.h:
	Add method get_extension_of_format.

2015-04-12  kitone  <kitone@gna.org>

	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	Refactoring, using the set_filename_from_another_uri introduce in the previous commit.

2015-04-12  kitone  <kitone@gna.org>

	* src/gui/dialogfilechooser.cc:
	* src/gui/dialogfilechooser.h:
	Add the ability to setup uri from another one using dialogfilechooser.

2015-04-12  kitone  <kitone@gna.org>

	* src/gui/dialogfilechooser.cc:
	* src/utility.cc:
	* src/utility.h:
	Refactoring code to change extension of filename (dialog save document).

2015-04-12  kitone  <kitone@gna.org>

	* configure.ac:
	Switching back to development version.

2015-04-11  kitone  <kitone@gna.org>

	* NEWS:
	* configure.ac:
	Preparing 0.50.0 release.

2015-04-11  kitone  <kitone@gna.org>

	* share/ui/Makefile.am:
	* share/ui/dialog-character-codings.ui:
	* share/ui/dialog-encodings-chooser.ui:
	* share/ui/dialog-export-text.ui:
	* share/ui/dialog-import-text.ui:
	* share/ui/dialog-open-document.ui:
	* share/ui/dialog-save-document.ui:
	* share/ui/subtitleeditor.ui:
	* src/vp/videoplayer.cc:
	* src/we/waveformeditor.h:
	Remove deprecated widget.

2015-04-11  kitone  <kitone@gna.org>

	* share/ui/dialog-character-codings.ui: